edited welcome view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DS Domibyg</string>
+    <string name="app_name">NS Domibyg</string>
     <string name="action_settings">Settings</string>
     <string name="ImageDesc">WelcomeLogo</string>
 </resources>
