--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NS Domibyg</string>
     <string name="action_settings">Settings</string>
     <string name="ImageDesc">WelcomeLogo</string>
+    <string name="take_a_photo">Take a photo</string>
 </resources>
