--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">NS Domibyg</string>
+    <string name="app_name" translatable="false">NS Domibyg</string>
     <string name="action_settings">Settings</string>
-    <string name="ImageDesc">WelcomeLogo</string>
-    <string name="take_a_photo">Take a photo</string>
+    <string name="ImageDesc">Welcome logo</string>
+    <string name="take_a_photo">Take photo</string>
 </resources>
