--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
 
     <string name="login_button">Get in</string>
     <string name="send_button">Send</string>
+    <string name="InformationLogin">Please fill the fields bellow. You will see this form only once so make sure both your name and your phone number are correct.</string>
+    <string name="CheckBox">Remember me</string>
+    <string name="DescribeActionTakePhoto">Take a new picture for your report</string>
 </resources>
