--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,15 +6,13 @@
     <string name="newPhoto">New</string>
     <string name="keepPhoto">OK</string>
     <string name="preview">preview</string>
-    <string name="homebutton">meButton</string>
-
+    <string name="homebutton" translatable="false">meButton</string>
     <string name="user_name">Your name</string>
     <string name="user_phone">Phone number</string>
-
     <string name="login_button">Get in</string>
     <string name="send_button">Send</string>
-    <string name="InformationLogin">Please fill the fields bellow. You will see this form only once so make sure both your name and your phone number are correct.</string>
-    <string name="CheckBox">Remember me</string>
-    <string name="DescribeActionTakePhoto">Take a new picture for your report</string>
+    <string name="informationLogin">Please provide your login information</string>
+    <string name="checkBox">Remember me</string>
+    <string name="describeActionTakePhoto">Take a new picture for your report</string>
     <string name="counter_description">Pictures to be taken today:</string>
 </resources>
